@@ -1,6 +1,7 @@
 package com.nameplz.baedal.domain.user.service;
 
 import com.nameplz.baedal.domain.user.domain.User;
+import com.nameplz.baedal.domain.user.domain.UserRole;
 import com.nameplz.baedal.domain.user.dto.request.UserSignupRequestDto;
 import com.nameplz.baedal.domain.user.dto.request.UserUpdateRequestDto;
 import com.nameplz.baedal.domain.user.dto.request.UserUpdateRoleRequestDto;
@@ -10,10 +11,10 @@ import com.nameplz.baedal.domain.user.mapper.UserMapper;
 import com.nameplz.baedal.domain.user.repository.UserRepository;
 import com.nameplz.baedal.global.common.exception.GlobalException;
 import com.nameplz.baedal.global.common.response.ResultCase;
+import com.nameplz.baedal.global.common.security.UserDetailsServiceImpl;
 import jakarta.transaction.Transactional;
 import jakarta.validation.Valid;
 import java.util.List;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Sort;
@@ -27,6 +28,7 @@ public class UserService {
     private final UserRepository userRepository;
     private final PasswordEncoder passwordEncoder;
     private final UserMapper userMapper;
+    private final UserDetailsServiceImpl userDetailsService;
 
     /**
      * 회원가입
@@ -99,14 +101,13 @@ public class UserService {
     /**
      * 회원정보 전체검색
      */
-    // TODO : java 17에서는 .collect(Collectors.toList()); 부분을 toList();로 줄여서 사용가능합니다!
     // TODO : 컨트롤러 단에서 Pageable 을 받아서 바로 처리할 수 있습니다!
     // import org.springframework.data.domain.Pageable; 입니다!
     public List<UserUpdateResponseDto> getAllUsers(int page, int size, String sortBy) {
         PageRequest pageRequest = PageRequest.of(page, size, Sort.by(sortBy).descending());
         return userRepository.findAll(pageRequest).stream()
             .map(userMapper::userToUserUpdateResponseDto)
-            .collect(Collectors.toList());
+            .toList();
     }
 
     /**
@@ -116,10 +117,14 @@ public class UserService {
     public UserUpdateResponseDto updateUserRole(String username, UserUpdateRoleRequestDto request) {
         User user = userRepository.findById(username)
             .orElseThrow(() -> new GlobalException(ResultCase.USER_NOT_FOUND));
-        // TODO : 수정필요
-        //user.setRole(User.RoleType.valueOf(request.getRole().toUpperCase()));
 
+        // 권한 업데이트
+        user.updateRole(UserRole.valueOf(request.role()));
         userRepository.save(user);
+
+        // Redis 캐시에서 사용자 정보 삭제
+        userDetailsService.removeUserFromCache(username);
+
         return userMapper.userToUserUpdateResponseDto(user);
     }
 }
